--- a/roles/java/templates/filter-drupal.xml
+++ b/roles/java/templates/filter-drupal.xml
@@ -18,7 +18,7 @@
 
          Note that 3306 is the default mysql port.
       -->
-    <connection server="localhost" port="3306" dbname="drupal7" user="root" password="islandora">
+    <connection server="localhost" port="3306" dbname="drupal" user="root" password="root">
       <sql>
         <!--Different sql statement for each connection.  This is for drupal
              multisites that are setup using one database with table prefixes.
